--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-static-server",
+  "name": "@glennweb/react-native-static-server",
   "version": "0.5.0",
   "repository": {
     "type": "git",
@@ -17,13 +17,9 @@
   "keywords": [
     "react-native"
   ],
-  "author": {
-    "name": "Fred Chasen",
-    "email": "fchasen@gmail.com"
-  },
+  "author": "Glenn Bickford <glennweb@gmail.com>",
   "license": "MIT",
   "licenseFilename": "LICENSE",
-  "readmeFilename": "README.md",
   "peerDependencies": {
     "react": "*",
     "react-native": "*"
@@ -34,5 +30,8 @@
     "index.js",
     "index.d.ts",
     "react-native-static-server.podspec"
-  ]
+  ],
+  "bugs": {
+    "url": "https://github.com/futurepress/react-native-static-server/issues"
+  }
 }
